syntax = "proto3";
package isuxportal.proto.services.registration;
option go_package = "github.com/isucon/isucon10-portal/proto/services/registration";

message GetTeamInvitationRequest {
}

message GetTeamInvitationResponse {
  int64 team_id = 1;
  string invite_url = 2;
}

